force-app/main/default/objects/Script__c/fields/CustomerProfile__c.field-meta.xml
<CustomField>
    <fullName>CustomerProfile__c</fullName>
    <label>Perfil do Cliente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>