force-app/main/default/objects/Script__c/fields/Logic__c.field-meta.xml
<CustomField>
    <fullName>Logic__c</fullName>
    <label>Lógica</label>
    <type>TextArea</type>
</CustomField>