force-app/main/default/objects/Script__c/fields/ManualPotentialReach__c.field-meta.xml
<CustomField>
    <fullName>ManualPotentialReach__c</fullName>
    <description>Utilizado para mostrar o potencial de alcance do aviso manual</description>
    <inlineHelpText>Mostra o número total de clientes, que podem ser impactados.</inlineHelpText>
    <label>Alcance Potencial Manual</label>
    <summaryFilterItems>
        <field>ScriptDetail__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Log de Avisos</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ScriptDetail__c.Log__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>ScriptDetail__c.Script__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>