force-app/main/default/objects/Script__c/fields/NextScript__c.field-meta.xml
<CustomField>
    <fullName>NextScript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destino</label>
    <referenceTo>Script__c</referenceTo>
    <relationshipLabel>Scripts</relationshipLabel>
    <relationshipName>ChildScripts</relationshipName>
    <type>Lookup</type>
</CustomField>