force-app/main/default/objects/Script__c/fields/PotentialReach__c.field-meta.xml
<CustomField>
    <fullName>PotentialReach__c</fullName>
    <description>Utilizado para mostrar o potencial de alcance de avisos manuais e automáticos</description>
    <formula>CASE( 
				RecordType.DeveloperName,
					    &quot;AutomaticWarning&quot;,
					     MassivePotentialReach__c,
					    &quot;ManualWarning&quot;,
					     ManualPotentialReach__c ,
          NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Mostra o número total de clientes, que podem ser impactados por este aviso.
Atenção: Para Avisos Automáticos, esta informação é preenchida automaticamente, somente alguns instantes após a ativação do aviso.</inlineHelpText>
    <label>Alcance Potencial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>