force-app/main/default/objects/Script__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fix</fullName>
                <label>Fixa</label>
            </value>
            <value>
                <fullName>Mobile</fullName>
                <label>Móvel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>