force-app/main/default/objects/Script__c/fields/QuestionScript__c.field-meta.xml
<CustomField>
    <fullName>QuestionScript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pergunta</label>
    <referenceTo>Script__c</referenceTo>
    <relationshipLabel>Respostas</relationshipLabel>
    <relationshipName>ParentScripts</relationshipName>
    <type>Lookup</type>
</CustomField>