force-app/main/default/objects/Script__c/fields/SaveLog__c.field-meta.xml
<CustomField>
    <fullName>SaveLog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salvar Log de Execução</label>
    <type>Checkbox</type>
</CustomField>