force-app/main/default/objects/Script__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Data Inicial</label>
    <type>Date</type>
</CustomField>