force-app/main/default/objects/Script__c/fields/SupportClassification__c.field-meta.xml
<CustomField>
    <fullName>SupportClassification__c</fullName>
    <label>Classificação no Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cluster 0</fullName>
            </value>
            <value>
                <fullName>Cluster 1</fullName>
            </value>
            <value>
                <fullName>Cluster 2</fullName>
            </value>
            <value>
                <fullName>Cluster 3</fullName>
            </value>
            <value>
                <fullName>Cluster 4</fullName>
            </value>
            <value>
                <fullName>Cluster 5</fullName>
            </value>
            <value>
                <fullName>Cluster 6</fullName>
            </value>
            <value>
                <fullName>Cluster 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>