force-app/main/default/objects/Script__c/fields/TotalNotices__c.field-meta.xml
<CustomField>
    <fullName>TotalNotices__c</fullName>
    <description>Retorna a quantidade de logs existentes para o aviso</description>
    <inlineHelpText>Mostra o número de vezes que o aviso foi verbalizado (Em avisos recorrentes, todas as verbalizações do mesmo aviso são consideradas)</inlineHelpText>
    <label>Total de Avisos</label>
    <summaryFilterItems>
        <field>ScriptDetail__c.Verbalized__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ScriptDetail__c.Script__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>