force-app/main/default/objects/Script__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SalesSupport</fullName>
                <label>Suporte á Vendas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>