force-app/main/default/objects/Script__c/fields/UpdatableField1__c.field-meta.xml
<CustomField>
    <fullName>UpdatableField1__c</fullName>
    <description>Campo que será exibido no fluxo e poderá ser atualizado pelo usuário</description>
    <label>Campo para atualização 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Telefone</fullName>
            </value>
            <value>
                <fullName>Data de Nascimento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>