force-app/main/default/objects/Script__c/fields/UpdatableField2__c.field-meta.xml
<CustomField>
    <fullName>UpdatableField2__c</fullName>
    <label>Campo para atualização 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Telefone</fullName>
            </value>
            <value>
                <fullName>Data de Nascimento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>