force-app/main/default/objects/Script__c/recordTypes/Answer.recordType-meta.xml
<RecordType>
    <fullName>Answer</fullName>
    <active>true</active>
    <description>Cadastro de repostas para as perguntas do Fluxo</description>
    <label>Resposta</label>
</RecordType>