force-app/main/default/objects/Script__c/recordTypes/AutomaticWarning.recordType-meta.xml
<RecordType>
    <fullName>AutomaticWarning</fullName>
    <active>true</active>
    <description>Tipo de Registro para criação de avisos automáticos exibidos no mural de avisos do cliente</description>
    <label>Aviso Automático (Massivo)</label>
</RecordType>