force-app/main/default/objects/Script__c/recordTypes/Cluster.recordType-meta.xml
<RecordType>
    <fullName>Cluster</fullName>
    <active>true</active>
    <description>Procedimentos Móvel e Fixa</description>
    <label>Cluster</label>
</RecordType>