force-app/main/default/objects/Script__c/recordTypes/Flow.recordType-meta.xml
<RecordType>
    <fullName>Flow</fullName>
    <active>true</active>
    <description>Cadastro do Fluxo</description>
    <label>Fluxo</label>
</RecordType>