force-app/main/default/objects/Script__c/recordTypes/Instruction.recordType-meta.xml
<RecordType>
    <fullName>Instruction</fullName>
    <active>true</active>
    <description>Tipo de registro para o fluxo serguir somente por instrução.</description>
    <label>Instrução</label>
</RecordType>