force-app/main/default/objects/Script__c/recordTypes/ManualWarning.recordType-meta.xml
<RecordType>
    <fullName>ManualWarning</fullName>
    <active>true</active>
    <description>Tipo de Registro para criação de avisos com atribuição manual de clientes exibidos no mural de avisos</description>
    <label>Aviso Manual</label>
</RecordType>