force-app/main/default/objects/Script__c/recordTypes/MobileAlta.recordType-meta.xml
<RecordType>
    <fullName>MobileAlta</fullName>
    <active>true</active>
    <description>Script para venda de Alta Móvel</description>
    <label>Venda de Móvel (Alta)</label>
</RecordType>