force-app/main/default/objects/Script__c/recordTypes/Question.recordType-meta.xml
<RecordType>
    <fullName>Question</fullName>
    <active>true</active>
    <description>Cadastro de perguntas com grupo de opções de resposta</description>
    <label>Pergunta</label>
</RecordType>