force-app/main/default/objects/Script__c/validationRules/CheckEndDateGreaterThanStartDateRule.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckEndDateGreaterThanStartDateRule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
RecordType.DeveloperName = &apos;AutomaticWarning&apos;,
RecordType.DeveloperName = &apos;ManualWarning&apos;
),
EndDate__c &lt; StartDate__c
)</errorConditionFormula>
    <errorMessage>A data final não pode ser inferior à data inicial</errorMessage>
</ValidationRule>