force-app/main/default/objects/Script__c/validationRules/CheckNewScriptNotActiveRule.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckNewScriptNotActiveRule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(), 
    ISPICKVAL(Status__c,&apos;Active&apos;),
    RecordType.DeveloperName = &apos;AutomaticWarning&apos;
)</errorConditionFormula>
    <errorMessage>Um aviso não pode ser criado com o status Ativo</errorMessage>
</ValidationRule>