force-app/main/default/objects/Script__c/validationRules/CheckNotEditScriptActiveRule.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckNotEditScriptActiveRule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISPICKVAL(Status__c,&apos;Active&apos;),
				ISPICKVAL(PRIORVALUE(Status__c),&apos;Active&apos;),
    OR(
				RecordType.DeveloperName = &apos;AutomaticWarning&apos;,
				RecordType.DeveloperName = &apos;ManualWarning&apos;
    ),
				OR(
								 ISCHANGED(Name),
								 ISCHANGED(Recurrent__c),
								 ISCHANGED(Logic__c)
								)
)</errorConditionFormula>
    <errorMessage>Não é permitido editar um aviso após ativá-lo.</errorMessage>
</ValidationRule>