force-app/main/default/objects/Script__c/validationRules/CheckStatusScriptActiveRule.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckStatusScriptActiveRule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	OR(
	RecordType.DeveloperName = &apos;AutomaticWarning&apos;,
	RecordType.DeveloperName = &apos;ManualWarning&apos;
	),
	ISPICKVAL(Status__c,&apos;Draft&apos;),
	ISPICKVAL(PRIORVALUE(Status__c),&apos;Active&apos;)
)</errorConditionFormula>
    <errorMessage>Um aviso ativo não pode ter o Status alterado para Rascunho</errorMessage>
</ValidationRule>