force-app/main/default/objects/Script__c/validationRules/CheckStatusScriptCanceledRule.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckStatusScriptCanceledRule</fullName>
    <active>true</active>
    <description>Um aviso cancelado não pode ter o Status alterado</description>
    <errorConditionFormula>AND(
	OR(
	RecordType.DeveloperName = &apos;AutomaticWarning&apos;,
	RecordType.DeveloperName = &apos;ManualWarning&apos;
	),
	ISCHANGED(Status__c),
	ISPICKVAL(PRIORVALUE(Status__c),&apos;Canceled&apos;)
)</errorConditionFormula>
    <errorMessage>Um aviso cancelado não pode ter o Status alterado.</errorMessage>
</ValidationRule>