force-app/main/default/objects/Script__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SupportClassification__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Category__c</columns>
    <columns>ProductType__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CustomerProfile__c</columns>
    <columns>Status__c</columns>
    <columns>ScriptConfig__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>