force-app/main/default/objects/Script__c/listViews/FlowRecordType.listView-meta.xml
<ListView>
    <fullName>FlowRecordType</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Script__c.AutomaticWarning,Script__c.ManualWarning</value>
    </filters>
    <label>Fluxos</label>
</ListView>